Bug #367529 --> unable to load remote images in news, the remote content UI never shows up. sr=bienvenu